[gd_scene load_steps=11 format=3 uid="uid://cutg6puwr6yo7"]

[ext_resource type="Script" uid="uid://ln5mm5m1fpio" path="res://scripts/EndScreen/EndScreen.gd" id="1_loe1s"]
[ext_resource type="FontFile" uid="uid://dc88owywydkkx" path="res://assets/fonts/Pixel Digivolve.otf" id="1_m0ilp"]
[ext_resource type="Texture2D" uid="uid://bgfwnpubndeva" path="res://assets/sprites/HUD/Icons.png" id="2_vrf6g"]
[ext_resource type="Texture2D" uid="uid://dg2g22dwuln8k" path="res://assets/sprites/Interface/EndMenuIcons/EndMenueIcons.png" id="4_24i5e"]
[ext_resource type="Texture2D" uid="uid://d1pxuf47nm8f6" path="res://assets/sprites/Interface/MainMenue/MainMenueIcons.png" id="5_fktn6"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1hhxm"]
texture = ExtResource("4_24i5e")
region_rect = Rect2(0, 0, 128, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vrf6g"]
texture = ExtResource("4_24i5e")
region_rect = Rect2(0, 34, 128, 30)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3wolj"]
texture = ExtResource("5_fktn6")
region_rect = Rect2(0, 128, 128, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0k4eu"]
texture = ExtResource("5_fktn6")
region_rect = Rect2(0, 162, 128, 30)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8mu2j"]

[node name="EndScreen" type="CanvasLayer"]
script = ExtResource("1_loe1s")

[node name="VBoxContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(0, 600)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -282.5
offset_top = -300.0
offset_right = 282.5
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="NinePatchRect" parent="VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_vrf6g")
region_rect = Rect2(0, 64, 32, 32)
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 7

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 400

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 35
alignment = 1

[node name="GameOver" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_m0ilp")
theme_override_font_sizes/font_size = 24
text = "Fin de la partie :"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Result" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 58
text = "RÃ©sultat de la partie"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer2/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 30

[node name="MainMenu" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer2/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(512, 128)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_m0ilp")
theme_override_font_sizes/font_size = 38
theme_override_styles/normal = SubResource("StyleBoxTexture_1hhxm")
theme_override_styles/pressed = SubResource("StyleBoxTexture_vrf6g")
theme_override_styles/hover = SubResource("StyleBoxTexture_vrf6g")

[node name="ExitButton" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer2/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(512, 128)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_m0ilp")
theme_override_font_sizes/font_size = 38
theme_override_styles/normal = SubResource("StyleBoxTexture_3wolj")
theme_override_styles/pressed = SubResource("StyleBoxTexture_0k4eu")
theme_override_styles/hover = SubResource("StyleBoxTexture_0k4eu")
theme_override_styles/focus = SubResource("StyleBoxEmpty_8mu2j")

[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer2/MarginContainer/HBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer2/MarginContainer/HBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
